--- a/public_html/index.html
+++ b/public_html/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="en-US">
 <!--
     Playlister
     v 1.0
@@ -19,7 +19,8 @@
     <meta charset="utf-8">
 
     <!-- WE ARE USING THE Tangerine FONT FOR MOST CONTROLS -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine">
+    <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine"> -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter&display=swap">
 
     <!-- THESE ARE OUR STYLESHEETS, ONE FOR THE MODALS, ONE FOR -->
     <!-- ALL OTHER LAYOUT, FONTS, AND COLORS -->
@@ -45,6 +46,7 @@
         <div id="sidebar-list">
         </div>
         <div id="edit-toolbar">
+            <input type="button" id="add-song-button" class="toolbar-button" value="+" />
             <input type="button" id='undo-button' value="⟲" class="toolbar-button" />
             <input type="button" id='redo-button' value="⟳" class="toolbar-button" />
             <input type="button" id='close-button' value="&#x2715;" class="toolbar-button" />
@@ -67,6 +69,55 @@
                 <div class="modal-south">
                     <input type="button" id="delete-list-confirm-button" class="modal-button" value='Confirm' />
                     <input type="button" id="delete-list-cancel-button" class="modal-button" value='Cancel' />
+                </div>
+            </div>
+        </div>
+        
+        <!-- MODAL (i.e. dialog) FOR VERIFYING THE DELETION OF A SONG -->
+        <div class="modal" id="delete-song-modal" data-animation="slideInOutLeft">
+            <div class="modal-root" id='verify-delete-song-root'>
+                <div class="modal-north">
+                    Delete playlist?
+                </div>                
+                <div class="modal-center">
+                    <div class="modal-center-content">
+                        Are you sure you wish to permanently remove <span id="delete-song-span"></span> from the playlist?
+                    </div>
+                </div>
+                <div class="modal-south">
+                    <input type="button" id="delete-song-confirm-button" class="modal-button" value='Confirm' />
+                    <input type="button" id="delete-song-cancel-button" class="modal-button" value='Cancel' />
+                </div>
+            </div>
+        </div>
+
+        <!-- MODAL (i.e. dialog) FOR EDITING A SONG -->
+        <div class="modal" id="edit-list-modal" data-animation="slideInOutLeft">
+            <div class="modal-root" id='verify-edit-list-root'>
+                <div class="modal-north">
+                    Edit Song
+                </div>                
+                <div class="modal-center">
+                    <div class="modal-center-content">
+                        <div class="fake-span">
+                            <label for="title">Title:</label>
+                            <input type="text" id="eTitle" name="title"/>
+                            <br>
+                        </div>
+                        <div class="fake-span">
+                            <label for="artist">Artist:</label>
+                            <input type="text" id="eArtist" name="artist" />
+                            <br>
+                        </div>
+                        <div class="fake-span">
+                            <label for="youtubeID">Youtube ID:</label>
+                            <input type="text" id="eID" name="youtubeID" />
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-south">
+                    <input type="button" id="edit-list-confirm-button" class="modal-button" value='Confirm' />
+                    <input type="button" id="edit-list-cancel-button" class="modal-button" value='Cancel' />
                 </div>
             </div>
         </div>
